syntax = "proto3";

package test.grpc;

message TestUnaryRequest {
  string name = 1;
}

message TestUnaryResponse {
  string message = 1;
}

service TestService {
  rpc TestUnary(TestUnaryRequest) returns (TestUnaryResponse);
  rpc TestClientStream(stream TestUnaryRequest) returns (TestUnaryResponse);
  rpc TestServerStream(TestUnaryRequest) returns (stream TestUnaryResponse);
  rpc TestBidiStream(stream TestUnaryRequest) returns (stream TestUnaryResponse);
}
